--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,14 @@
 # Starter pipeline
+- task: DownloadPipelineArtifact@2
+  inputs:
+    buildType: 'specific'
+    project: 'fd519d47-b773-4a59-a394-fe8d1b30b486'
+    definition: '3'
+    specificBuildWithTriggering: true
+    buildVersionToDownload: 'latest'
+    allowFailedBuilds: true
+    artifactName: 'LatestArtefacts'
+    targetPath: '$(Pipeline.Workspace)'
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
